--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <!-- imagen principal -->
-
+    <div id="splashScreen">
+        <div class="preloader-wrapper">
+                <img src="assets/images/lyft-competencia-uber.jpg" alt="">
+        </div>
+        
+    </div>
     <!-- iniciar sesión -->
     <main>
         <div class="row">
@@ -27,7 +32,7 @@
     <div class="row">
         <div class="input-field col l4 m4 s12">
             <select>
-              <option value="" disabled selected>Choose your option</option>
+              <option value="" disabled selected>País</option>
               <option value="México" data-icon="assets/images/MEX.jpg">México</option>
               <option value="Polonia" data-icon="assets/images/polonia.png">Polonia</option>
               <option value="Tailandia" data-icon="assets/images/tailandia.jpg">Tailandia</option>
