--- a/index.html
+++ b/index.html
@@ -10,40 +10,11 @@
 </head>
 <body>
     <!-- imagen principal -->
-    <div id="splashScreen">
-        <div class="preloader-wrapper">
-                <img src="assets/images/lyft-competencia-uber.jpg" alt="">
+    <div class="row" id="splashScreen">
+        <div class="fond preloader-wrapper col l12 m12 s12">
+                <!-- <img class="image-responsive" src="assets/images/lyft-competencia-uber.jpg" alt=""> -->
         </div>
-        
     </div>
-    <!-- iniciar sesión -->
-    <main>
-        <div class="row">
-            <div class="col l6 s3">
-                <a class="white-border btn right valign-wrapper N/A transparent btn-large white-text">LOG IN</a>
-            </div>
-            <div class="col l6 s3">
-                <a class="white-border btn left valign-wrapper N/A transparent btn-large white-text">SIGN UP</a>
-            </div>
-        </div>
-    </main>
-
-    <!-- tarjeta pais y telefono -->
-    <div class="row">
-        <div class="input-field col l4 m4 s12">
-            <select>
-              <option value="" disabled selected>País</option>
-              <option value="México" data-icon="assets/images/MEX.jpg">México</option>
-              <option value="Polonia" data-icon="assets/images/polonia.png">Polonia</option>
-              <option value="Tailandia" data-icon="assets/images/tailandia.jpg">Tailandia</option>
-            </select>
-            <label>Selecciona tu país</label>
-          </div>
-    </div>
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
