--- a/principal.html
+++ b/principal.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a id="add-contact" href="#!" class="modal-close waves-effect waves-green btn #e91e63 pink">Next</a>
+                <button id="next" href="#!" class="modal-close waves-effect waves-green btn #e91e63 pink">Next</button>
             </div>
             </div> 
 
